target/generated-sources/antlr4/MutatorOldParser.java
// Generated from MutatorOld.g4 by ANTLR 4.5
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MutatorOldParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMA=1, MUTANT_ZERO=2, KILL_WITH=3, ALIEN_STRAINS=4, STRAIN=5, END=6, 
		MUTATE=7, TO=8, ID=9, FILENAME=10, SYMBOL=11, WS=12, COMMENT=13;
	public static final int
		RULE_mutFile = 0, RULE_script = 1, RULE_strainsFile = 2, RULE_mutantZero = 3, 
		RULE_killWith = 4, RULE_alienStrains = 5, RULE_strain = 6, RULE_mutation = 7, 
		RULE_idList = 8, RULE_symbolList = 9, RULE_fileList = 10;
	public static final String[] ruleNames = {
		"mutFile", "script", "strainsFile", "mutantZero", "killWith", "alienStrains", 
		"strain", "mutation", "idList", "symbolList", "fileList"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "','", "'mutant zero:'", "'kill with:'", "'alien strains:'", "'strain'", 
		"'end'", "'mutate'", "'to'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "COMMA", "MUTANT_ZERO", "KILL_WITH", "ALIEN_STRAINS", "STRAIN", 
		"END", "MUTATE", "TO", "ID", "FILENAME", "SYMBOL", "WS", "COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MutatorOld.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MutatorOldParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class MutFileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MutatorOldParser.EOF, 0); }
		public StrainsFileContext strainsFile() {
			return getRuleContext(StrainsFileContext.class,0);
		}
		public ScriptContext script() {
			return getRuleContext(ScriptContext.class,0);
		}
		public MutFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mutFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MutatorOldListener ) ((MutatorOldListener)listener).enterMutFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MutatorOldListener ) ((MutatorOldListener)listener).exitMutFile(this);
		}
	}

	public final MutFileContext mutFile() throws RecognitionException {
		MutFileContext _localctx = new MutFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_mutFile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(24);
			switch (_input.LA(1)) {
			case STRAIN:
				{
				setState(22);
				strainsFile();
				}
				break;
			case MUTANT_ZERO:
				{
				setState(23);
				script();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(26);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScriptContext extends ParserRuleContext {
		public MutantZeroContext mutantZero() {
			return getRuleContext(MutantZeroContext.class,0);
		}
		public KillWithContext killWith() {
			return getRuleContext(KillWithContext.class,0);
		}
		public AlienStrainsContext alienStrains() {
			return getRuleContext(AlienStrainsContext.class,0);
		}
		public List<StrainContext> strain() {
			return getRuleContexts(StrainContext.class);
		}
		public StrainContext strain(int i) {
			return getRuleContext(StrainContext.class,i);
		}
		public List<MutationContext> mutation() {
			return getRuleContexts(MutationContext.class);
		}
		public MutationContext mutation(int i) {
			return getRuleContext(MutationContext.class,i);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MutatorOldListener ) ((MutatorOldListener)listener).enterScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MutatorOldListener ) ((MutatorOldListener)listener).exitScript(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_script);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			mutantZero();
			setState(29);
			killWith();
			setState(31);
			_la = _input.LA(1);
			if (_la==ALIEN_STRAINS) {
				{
				setState(30);
				alienStrains();
				}
			}

			setState(36);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STRAIN) {
				{
				{
				setState(33);
				strain();
				}
				}
				setState(38);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(40); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(39);
				mutation();
				}
				}
				setState(42); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==MUTATE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StrainsFileContext extends ParserRuleContext {
		public List<StrainContext> strain() {
			return getRuleContexts(StrainContext.class);
		}
		public StrainContext strain(int i) {
			return getRuleContext(StrainContext.class,i);
		}
		public StrainsFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_strainsFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MutatorOldListener ) ((MutatorOldListener)listener).enterStrainsFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MutatorOldListener ) ((MutatorOldListener)listener).exitStrainsFile(this);
		}
	}

	public final StrainsFileContext strainsFile() throws RecognitionException {
		StrainsFileContext _localctx = new StrainsFileContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_strainsFile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(44);
				strain();
				}
				}
				setState(47); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==STRAIN );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MutantZeroContext extends ParserRuleContext {
		public TerminalNode MUTANT_ZERO() { return getToken(MutatorOldParser.MUTANT_ZERO, 0); }
		public FileListContext fileList() {
			return getRuleContext(FileListContext.class,0);
		}
		public MutantZeroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mutantZero; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MutatorOldListener ) ((MutatorOldListener)listener).enterMutantZero(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MutatorOldListener ) ((MutatorOldListener)listener).exitMutantZero(this);
		}
	}

	public final MutantZeroContext mutantZero() throws RecognitionException {
		MutantZeroContext _localctx = new MutantZeroContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_mutantZero);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			match(MUTANT_ZERO);
			setState(50);
			fileList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KillWithContext extends ParserRuleContext {
		public TerminalNode KILL_WITH() { return getToken(MutatorOldParser.KILL_WITH, 0); }
		public FileListContext fileList() {
			return getRuleContext(FileListContext.class,0);
		}
		public KillWithContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_killWith; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MutatorOldListener ) ((MutatorOldListener)listener).enterKillWith(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MutatorOldListener ) ((MutatorOldListener)listener).exitKillWith(this);
		}
	}

	public final KillWithContext killWith() throws RecognitionException {
		KillWithContext _localctx = new KillWithContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_killWith);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(KILL_WITH);
			setState(53);
			fileList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlienStrainsContext extends ParserRuleContext {
		public TerminalNode ALIEN_STRAINS() { return getToken(MutatorOldParser.ALIEN_STRAINS, 0); }
		public FileListContext fileList() {
			return getRuleContext(FileListContext.class,0);
		}
		public AlienStrainsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alienStrains; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MutatorOldListener ) ((MutatorOldListener)listener).enterAlienStrains(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MutatorOldListener ) ((MutatorOldListener)listener).exitAlienStrains(this);
		}
	}

	public final AlienStrainsContext alienStrains() throws RecognitionException {
		AlienStrainsContext _localctx = new AlienStrainsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_alienStrains);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(ALIEN_STRAINS);
			setState(56);
			fileList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StrainContext extends ParserRuleContext {
		public TerminalNode STRAIN() { return getToken(MutatorOldParser.STRAIN, 0); }
		public TerminalNode ID() { return getToken(MutatorOldParser.ID, 0); }
		public TerminalNode END() { return getToken(MutatorOldParser.END, 0); }
		public List<MutationContext> mutation() {
			return getRuleContexts(MutationContext.class);
		}
		public MutationContext mutation(int i) {
			return getRuleContext(MutationContext.class,i);
		}
		public StrainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_strain; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MutatorOldListener ) ((MutatorOldListener)listener).enterStrain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MutatorOldListener ) ((MutatorOldListener)listener).exitStrain(this);
		}
	}

	public final StrainContext strain() throws RecognitionException {
		StrainContext _localctx = new StrainContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_strain);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(STRAIN);
			setState(59);
			match(ID);
			setState(61); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(60);
				mutation();
				}
				}
				setState(63); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==MUTATE );
			setState(65);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MutationContext extends ParserRuleContext {
		public TerminalNode MUTATE() { return getToken(MutatorOldParser.MUTATE, 0); }
		public IdListContext idList() {
			return getRuleContext(IdListContext.class,0);
		}
		public List<SymbolListContext> symbolList() {
			return getRuleContexts(SymbolListContext.class);
		}
		public SymbolListContext symbolList(int i) {
			return getRuleContext(SymbolListContext.class,i);
		}
		public TerminalNode TO() { return getToken(MutatorOldParser.TO, 0); }
		public MutationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mutation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MutatorOldListener ) ((MutatorOldListener)listener).enterMutation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MutatorOldListener ) ((MutatorOldListener)listener).exitMutation(this);
		}
	}

	public final MutationContext mutation() throws RecognitionException {
		MutationContext _localctx = new MutationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_mutation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(MUTATE);
			setState(73);
			switch (_input.LA(1)) {
			case ID:
				{
				setState(68);
				idList();
				}
				break;
			case SYMBOL:
				{
				setState(69);
				symbolList();
				setState(70);
				match(TO);
				setState(71);
				symbolList();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdListContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(MutatorOldParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(MutatorOldParser.ID, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MutatorOldParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MutatorOldParser.COMMA, i);
		}
		public IdListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MutatorOldListener ) ((MutatorOldListener)listener).enterIdList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MutatorOldListener ) ((MutatorOldListener)listener).exitIdList(this);
		}
	}

	public final IdListContext idList() throws RecognitionException {
		IdListContext _localctx = new IdListContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_idList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(ID);
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(76);
				match(COMMA);
				setState(77);
				match(ID);
				}
				}
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SymbolListContext extends ParserRuleContext {
		public List<TerminalNode> SYMBOL() { return getTokens(MutatorOldParser.SYMBOL); }
		public TerminalNode SYMBOL(int i) {
			return getToken(MutatorOldParser.SYMBOL, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MutatorOldParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MutatorOldParser.COMMA, i);
		}
		public SymbolListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_symbolList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MutatorOldListener ) ((MutatorOldListener)listener).enterSymbolList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MutatorOldListener ) ((MutatorOldListener)listener).exitSymbolList(this);
		}
	}

	public final SymbolListContext symbolList() throws RecognitionException {
		SymbolListContext _localctx = new SymbolListContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_symbolList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(SYMBOL);
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(84);
				match(COMMA);
				setState(85);
				match(SYMBOL);
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FileListContext extends ParserRuleContext {
		public List<TerminalNode> FILENAME() { return getTokens(MutatorOldParser.FILENAME); }
		public TerminalNode FILENAME(int i) {
			return getToken(MutatorOldParser.FILENAME, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MutatorOldParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MutatorOldParser.COMMA, i);
		}
		public FileListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fileList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MutatorOldListener ) ((MutatorOldListener)listener).enterFileList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MutatorOldListener ) ((MutatorOldListener)listener).exitFileList(this);
		}
	}

	public final FileListContext fileList() throws RecognitionException {
		FileListContext _localctx = new FileListContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_fileList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(FILENAME);
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(92);
				match(COMMA);
				setState(93);
				match(FILENAME);
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}